# langraph-ecommerce-agent

./: .env_example  .gitignore  ARCHITECTURE.md  Details.md  Dockerfile  README.md  a.yml  docker-compose.yml  pyproject.toml
notebooks/: test_bigquery_client.ipynb  test_graph.ipynb  test_models.ipynb
src/analyst_9000/: main.py
src/analyst_9000/backend/ai_core/graph/: __init__.py  graph.py  nodes.py  states.py  tools.py
src/analyst_9000/backend/ai_core/llm/: callbacks.py  llm_utils.py  registry.py
src/analyst_9000/backend/ai_core/prompts/: __init__.py  qa_model.py  response_synthesizer.py  router.py  sql_generator.py
src/analyst_9000/backend/core/: bigquery_handler.py  config.py  constants.py  logger.py  session_store.py  setup.py
src/analyst_9000/backend/exceptions/: api_exceptions.py
src/analyst_9000/backend/helpers/: utils.py
src/analyst_9000/backend/helpers/sql_queries/: create_index_updated_at.sql  create_sessions_table_postgres.sql  create_sessions_table_sqlite.sql  get_table_description.sql  get_table_schema.sql
src/analyst_9000/backend/middleware/: middleware.py
src/analyst_9000/backend/routers/: chatbot.py  health.py
src/analyst_9000/backend/schemas/: api_schemas.py  db_schemas.py  llm_output.py
src/analyst_9000/backend/services/: __init__.py
src/analyst_9000/backend/services/app_startup/: app_startup_service.py
src/analyst_9000/backend/services/chat_history/: __init__.py  chat_history_service.py  chat_history_utils.py
src/analyst_9000/backend/services/chatbot/: __init__.py  chatbot_service.py
src/analyst_9000/frontend/: index.html
